--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.firebase:firebase-auth:19.4.0'
     implementation 'com.google.firebase:firebase-analytics-ktx:17.5.0'
-    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    implementation 'com.google.firebase:firebase-config-ktx:19.2.0'
+    implementation 'com.google.firebase:firebase-firestore:21.7.0'
+    implementation 'com.facebook.android:facebook-android-sdk:4.42.0'
     implementation 'com.google.firebase:firebase-messaging:20.3.0'
     implementation 'com.google.firebase:firebase-crashlytics-ktx:17.2.2'
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
